syntax = "proto3";

package patientsync;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
option (gogoproto.marshaler_all) = true;
option (gogoproto.unmarshaler_all) = true;

enum Source {
	SOURCE_UNKNOWN = 0;
	SOURCE_DRCHRONO = 1;
	SOURCE_HINT = 2;
	SOURCE_ELATION = 3;
	SOURCE_CSV = 4;
}

enum ThreadCreationType {
	THREAD_CREATION_TYPE_INVALID = 0;
	THREAD_CREATION_TYPE_SECURE = 1;
	THREAD_CREATION_TYPE_STANDARD = 2;
}


message InitiateSyncRequest {
	string organization_entity_id = 1 [(gogoproto.customname) = "OrganizationEntityID"];
	Source source = 2;
}

message InitiateSyncResponse {}


message ConfigureSyncRequest{
	string organization_entity_id = 1 [(gogoproto.customname) = "OrganizationEntityID"];
	Source source = 2;
	string token = 3;
}

message ConfigureSyncResponse {
}

message LookupSyncConfigurationRequest {
	string organization_entity_id = 1 [(gogoproto.customname) = "OrganizationEntityID"];
	Source source = 2;
}

message TagMappingItem {
	oneof key {
		string provider_id = 1 [(gogoproto.customname) = "ProviderID"];
	}
	string tag = 2;
}

message Config {
	ThreadCreationType thread_creation_type = 1;
	bool connected = 2;
	Source source = 3;
	repeated TagMappingItem tag_mappings = 4;	
}

message LookupSyncConfigurationResponse {
	Config config = 1;
}

message UpdateSyncConfigurationRequest {
	Source source = 1;
	string organization_entity_id = 2 [(gogoproto.customname) = "OrganizationEntityID"];
	repeated TagMappingItem tag_mappings = 3;
}

message UpdateSyncConfigurationResponse {
	Config config = 1;
}

service PatientSync {
	
	// ConfigureSync sets up a patient sync for a practice. 
	rpc ConfigureSync (ConfigureSyncRequest) returns (ConfigureSyncResponse);

	// InitiateSync kicks off the initial sync for a practice. It assumes that 
	// sync has already been configured. Calling this will ensure that all existing 
	// patients from the source are synced in to the practice account on Spruce, and that
	// the account is in a connected state on a move forward basis for all new patients
	// created in the source.
	rpc InitiateSync (InitiateSyncRequest) returns (InitiateSyncResponse);

	// LookupSyncConfiguration enables the looking up of sync configuration for an organization from a particular source.
	rpc LookupSyncConfiguration(LookupSyncConfigurationRequest) returns (LookupSyncConfigurationResponse);

	// UpdateSyncConfiguration enables updating certain aspects of the sync configuration
	rpc UpdateSyncConfiguration(UpdateSyncConfigurationRequest) returns (UpdateSyncConfigurationResponse);
}